// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListRow /> renders eventListRow with colored date correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 .row {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c4 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 88.33333333333333%;
  -webkit-flex: 0 0 88.33333333333333%;
  -ms-flex: 0 0 88.33333333333333%;
  flex: 0 0 88.33333333333333%;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 31.666666666666664%;
  -webkit-flex: 0 0 31.666666666666664%;
  -ms-flex: 0 0 31.666666666666664%;
  flex: 0 0 31.666666666666664%;
}

.c10 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 57.50000000000001%;
  -webkit-flex: 0 0 57.50000000000001%;
  -ms-flex: 0 0 57.50000000000001%;
  flex: 0 0 57.50000000000001%;
}

.c11 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c15 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c18 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c21 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 11.666666666666666%;
  -webkit-flex: 0 0 11.666666666666666%;
  -ms-flex: 0 0 11.666666666666666%;
  flex: 0 0 11.666666666666666%;
}

.c12 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,1);
}

.c8 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,0.6);
}

.c7 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #C56BFF;
  font-weight: 600;
}

.c0 {
  background-color: rgba(255,255,255,1);
}

.c0:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  display: none;
}

.c16 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 12px 0 12px 0;
}

.c22 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 14px 0 14px 0;
}

.c22:focus {
  outline: none;
}

.c19 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 18px 0;
}

.c19:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c3 {
  background: none;
  border: none;
  cursor: pointer;
  display: none;
}

.c3:focus {
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media screen and (min-width:481px) {
  .c2 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c4 {
    max-width: 75%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 75%;
    -ms-flex: 0 0 75%;
    flex: 0 0 75%;
  }
}

@media screen and (min-width:769px) {
  .c4 {
    max-width: 81.66666666666667%;
    -webkit-flex: 0 0 81.66666666666667%;
    -ms-flex: 0 0 81.66666666666667%;
    flex: 0 0 81.66666666666667%;
  }
}

@media screen and (min-width:1025px) {
  .c4 {
    max-width: 86.66666666666667%;
    -webkit-flex: 0 0 86.66666666666667%;
    -ms-flex: 0 0 86.66666666666667%;
    flex: 0 0 86.66666666666667%;
  }
}

@media screen and (min-width:481px) {
  .c6 {
    max-width: 19.166666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 19.166666666666664%;
    -ms-flex: 0 0 19.166666666666664%;
    flex: 0 0 19.166666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c6 {
    max-width: 13.333333333333334%;
    -webkit-flex: 0 0 13.333333333333334%;
    -ms-flex: 0 0 13.333333333333334%;
    flex: 0 0 13.333333333333334%;
  }
}

@media screen and (min-width:1025px) {
  .c6 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media screen and (min-width:481px) {
  .c10 {
    max-width: 57.50000000000001%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:769px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:1025px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:481px) {
  .c11 {
    max-width: 33.33333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 33.33333333333333%;
    -ms-flex: 0 0 33.33333333333333%;
    flex: 0 0 33.33333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:1025px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c15 {
    max-width: 80.83333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 80.83333333333333%;
    -ms-flex: 0 0 80.83333333333333%;
    flex: 0 0 80.83333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c15 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c15 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c18 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c18 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c18 {
    max-width: 9.166666666666668%;
    -webkit-flex: 0 0 9.166666666666668%;
    -ms-flex: 0 0 9.166666666666668%;
    flex: 0 0 9.166666666666668%;
  }
}

@media screen and (min-width:481px) {
  .c21 {
    max-width: 11.666666666666666%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:1025px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media only screen and {
  .c12 {
    font-size: 16px;
  }
}

@media only screen and {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:481px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c9 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:481px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 30px;
  }
}

@media screen and (min-width:481px) {
  .c20 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 row c2"
  >
    <button
      aria-expanded={false}
      aria-label="Expand Row"
      className="expandOrCollapse c3"
      onClick={[Function]}
      role="button"
    >
      <svg
        fill="#000"
        height={15}
        style={Object {}}
        viewBox="0 0 15 7"
        width={15}
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </button>
    <div
      className="c4"
    >
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="row c2"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              color="#C56BFF"
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c8"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c9 c10"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c13"
            >
              <div
                className="c8"
              >
                KABOO 3-Day Pass
              </div>
            </div>
          </div>
          <div
            className="c14 c15"
          >
            <div
              className="c12"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c16 c17"
          >
            <div
              className="c12"
            >
              KABOO 3-Day Pass
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c14 c18"
    >
      <span
        aria-label="See Tickets"
        className="c19"
        role="button"
        width="102px"
      >
        See Tickets
      </span>
    </div>
    <div
      className="c20 c21"
    >
      <button
        aria-label="More Info"
        className="moreInfo c22"
        onClick={[Function]}
        role="button"
      >
        <svg
          fill="rgba(0, 0, 15, 0.6)"
          height={22}
          viewBox="0 0 5 21"
          width={22}
        >
          <path
            d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<ListRow /> renders eventListRow with link correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 .row {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c4 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 88.33333333333333%;
  -webkit-flex: 0 0 88.33333333333333%;
  -ms-flex: 0 0 88.33333333333333%;
  flex: 0 0 88.33333333333333%;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 31.666666666666664%;
  -webkit-flex: 0 0 31.666666666666664%;
  -ms-flex: 0 0 31.666666666666664%;
  flex: 0 0 31.666666666666664%;
}

.c10 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 57.50000000000001%;
  -webkit-flex: 0 0 57.50000000000001%;
  -ms-flex: 0 0 57.50000000000001%;
  flex: 0 0 57.50000000000001%;
}

.c11 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c15 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c18 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c21 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 11.666666666666666%;
  -webkit-flex: 0 0 11.666666666666666%;
  -ms-flex: 0 0 11.666666666666666%;
  flex: 0 0 11.666666666666666%;
}

.c24 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 75%;
  -webkit-flex: 0 0 75%;
  -ms-flex: 0 0 75%;
  flex: 0 0 75%;
}

.c26 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 25%;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
}

.c12 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,1);
}

.c8 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,0.6);
}

.c7 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c25 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: rgba(255,255,255,1);
}

.c0:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  display: none;
}

.c16 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 12px 0 12px 0;
}

.c22 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 14px 0 14px 0;
}

.c22:focus {
  outline: none;
}

.c19 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 18px 0;
}

.c19:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c23 {
  padding-left: 8px;
}

.c3 {
  background: none;
  border: none;
  cursor: pointer;
  display: none;
}

.c3:focus {
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media screen and (min-width:481px) {
  .c2 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c4 {
    max-width: 75%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 75%;
    -ms-flex: 0 0 75%;
    flex: 0 0 75%;
  }
}

@media screen and (min-width:769px) {
  .c4 {
    max-width: 81.66666666666667%;
    -webkit-flex: 0 0 81.66666666666667%;
    -ms-flex: 0 0 81.66666666666667%;
    flex: 0 0 81.66666666666667%;
  }
}

@media screen and (min-width:1025px) {
  .c4 {
    max-width: 86.66666666666667%;
    -webkit-flex: 0 0 86.66666666666667%;
    -ms-flex: 0 0 86.66666666666667%;
    flex: 0 0 86.66666666666667%;
  }
}

@media screen and (min-width:481px) {
  .c6 {
    max-width: 19.166666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 19.166666666666664%;
    -ms-flex: 0 0 19.166666666666664%;
    flex: 0 0 19.166666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c6 {
    max-width: 13.333333333333334%;
    -webkit-flex: 0 0 13.333333333333334%;
    -ms-flex: 0 0 13.333333333333334%;
    flex: 0 0 13.333333333333334%;
  }
}

@media screen and (min-width:1025px) {
  .c6 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media screen and (min-width:481px) {
  .c10 {
    max-width: 57.50000000000001%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:769px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:1025px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:481px) {
  .c11 {
    max-width: 33.33333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 33.33333333333333%;
    -ms-flex: 0 0 33.33333333333333%;
    flex: 0 0 33.33333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:1025px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c15 {
    max-width: 80.83333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 80.83333333333333%;
    -ms-flex: 0 0 80.83333333333333%;
    flex: 0 0 80.83333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c15 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c15 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c18 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c18 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c18 {
    max-width: 9.166666666666668%;
    -webkit-flex: 0 0 9.166666666666668%;
    -ms-flex: 0 0 9.166666666666668%;
    flex: 0 0 9.166666666666668%;
  }
}

@media screen and (min-width:481px) {
  .c21 {
    max-width: 11.666666666666666%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:1025px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:481px) {
  .c24 {
    max-width: 83.33333333333334%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 83.33333333333334%;
    -ms-flex: 0 0 83.33333333333334%;
    flex: 0 0 83.33333333333334%;
  }
}

@media screen and (min-width:769px) {
  .c24 {
    max-width: 87.5%;
    -webkit-flex: 0 0 87.5%;
    -ms-flex: 0 0 87.5%;
    flex: 0 0 87.5%;
  }
}

@media screen and (min-width:1025px) {
  .c24 {
    max-width: 90%;
    -webkit-flex: 0 0 90%;
    -ms-flex: 0 0 90%;
    flex: 0 0 90%;
  }
}

@media screen and (min-width:481px) {
  .c26 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c26 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c26 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media only screen and {
  .c12 {
    font-size: 16px;
  }
}

@media only screen and {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:481px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c9 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:481px) {
  .c23 {
    padding-left: 12px;
  }
}

@media screen and (min-width:481px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 30px;
  }
}

@media screen and (min-width:481px) {
  .c20 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 row c2"
  >
    <button
      aria-expanded={false}
      aria-label="Expand Row"
      className="expandOrCollapse c3"
      onClick={[Function]}
      role="button"
    >
      <svg
        fill="#000"
        height={15}
        style={Object {}}
        viewBox="0 0 15 7"
        width={15}
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </button>
    <div
      className="c4"
    >
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="row c2"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c8"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c9 c10"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c13"
            >
              <div
                className="c8"
              >
                Del Mar Fairgrounds
              </div>
            </div>
          </div>
          <div
            className="c14 c15"
          >
            <div
              className="c12"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c16 c17"
          >
            <div
              className="c12"
            >
              Del Mar Fairgrounds
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c14 c18"
    >
      <span
        aria-label="See Tickets"
        className="c19"
        role="button"
        width="102px"
      >
        See Tickets
      </span>
    </div>
    <div
      className="c20 c21"
    >
      <button
        aria-label="More Info"
        className="moreInfo c22"
        onClick={[Function]}
        role="button"
      >
        <svg
          fill="rgba(0, 0, 15, 0.6)"
          height={22}
          viewBox="0 0 5 21"
          width={22}
        >
          <path
            d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c23 row c2"
  >
    <div
      className="c24"
    >
      <a
        className="c25"
        color=""
        href=""
        rel="_self"
        target=""
      >
        Ticket Options Available
      </a>
    </div>
    <div
      className="c26"
    >
      <div
        className="c8"
      >
        on Partner Site
      </div>
    </div>
  </div>
</div>
`;

exports[`<ListRow /> renders standard List Row correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c2 .row {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c4 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 88.33333333333333%;
  -webkit-flex: 0 0 88.33333333333333%;
  -ms-flex: 0 0 88.33333333333333%;
  flex: 0 0 88.33333333333333%;
}

.c6 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 31.666666666666664%;
  -webkit-flex: 0 0 31.666666666666664%;
  -ms-flex: 0 0 31.666666666666664%;
  flex: 0 0 31.666666666666664%;
}

.c10 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 57.50000000000001%;
  -webkit-flex: 0 0 57.50000000000001%;
  -ms-flex: 0 0 57.50000000000001%;
  flex: 0 0 57.50000000000001%;
}

.c11 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c13 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c15 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c17 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c18 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

.c21 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 11.666666666666666%;
  -webkit-flex: 0 0 11.666666666666666%;
  -ms-flex: 0 0 11.666666666666666%;
  flex: 0 0 11.666666666666666%;
}

.c12 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,1);
}

.c8 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,0.6);
}

.c7 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(0,0,15,1);
  font-weight: 600;
}

.c0 {
  background-color: rgba(255,255,255,1);
}

.c0:not(:last-of-type) {
  border-bottom: 1px solid #E0E0E0;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  display: none;
}

.c16 {
  display: none;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  width: 100%;
  cursor: pointer;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 12px 0 12px 0;
}

.c22 {
  background: none;
  border: none;
  cursor: pointer;
  padding: 14px 0 14px 0;
}

.c22:focus {
  outline: none;
}

.c19 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,1);
  border: 1px solid rgba(2,108,223,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 18px 0 18px 0;
}

.c19:disabled {
  color: rgba(255,255,255,1);
  background-color: rgba(2,108,223,0.2);
  border: 1px solid rgba(2,108,223,0.2);
  cursor: not-allowed;
}

.c3 {
  background: none;
  border: none;
  cursor: pointer;
  display: none;
}

.c3:focus {
  outline: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media screen and (min-width:481px) {
  .c2 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c4 {
    max-width: 75%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 75%;
    -ms-flex: 0 0 75%;
    flex: 0 0 75%;
  }
}

@media screen and (min-width:769px) {
  .c4 {
    max-width: 81.66666666666667%;
    -webkit-flex: 0 0 81.66666666666667%;
    -ms-flex: 0 0 81.66666666666667%;
    flex: 0 0 81.66666666666667%;
  }
}

@media screen and (min-width:1025px) {
  .c4 {
    max-width: 86.66666666666667%;
    -webkit-flex: 0 0 86.66666666666667%;
    -ms-flex: 0 0 86.66666666666667%;
    flex: 0 0 86.66666666666667%;
  }
}

@media screen and (min-width:481px) {
  .c6 {
    max-width: 19.166666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 19.166666666666664%;
    -ms-flex: 0 0 19.166666666666664%;
    flex: 0 0 19.166666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c6 {
    max-width: 13.333333333333334%;
    -webkit-flex: 0 0 13.333333333333334%;
    -ms-flex: 0 0 13.333333333333334%;
    flex: 0 0 13.333333333333334%;
  }
}

@media screen and (min-width:1025px) {
  .c6 {
    max-width: 10%;
    -webkit-flex: 0 0 10%;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
  }
}

@media screen and (min-width:481px) {
  .c10 {
    max-width: 57.50000000000001%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:769px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:1025px) {
  .c10 {
    max-width: 57.50000000000001%;
    -webkit-flex: 0 0 57.50000000000001%;
    -ms-flex: 0 0 57.50000000000001%;
    flex: 0 0 57.50000000000001%;
  }
}

@media screen and (min-width:481px) {
  .c11 {
    max-width: 33.33333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 33.33333333333333%;
    -ms-flex: 0 0 33.33333333333333%;
    flex: 0 0 33.33333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:1025px) {
  .c11 {
    max-width: 25%;
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
  }
}

@media screen and (min-width:481px) {
  .c13 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c13 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:481px) {
  .c15 {
    max-width: 80.83333333333333%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 80.83333333333333%;
    -ms-flex: 0 0 80.83333333333333%;
    flex: 0 0 80.83333333333333%;
  }
}

@media screen and (min-width:769px) {
  .c15 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c15 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c17 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c17 {
    max-width: 43.333333333333336%;
    -webkit-flex: 0 0 43.333333333333336%;
    -ms-flex: 0 0 43.333333333333336%;
    flex: 0 0 43.333333333333336%;
  }
}

@media screen and (min-width:1025px) {
  .c17 {
    max-width: 45%;
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media screen and (min-width:481px) {
  .c18 {
    max-width: 16.666666666666664%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 16.666666666666664%;
    -ms-flex: 0 0 16.666666666666664%;
    flex: 0 0 16.666666666666664%;
  }
}

@media screen and (min-width:769px) {
  .c18 {
    max-width: 12.5%;
    -webkit-flex: 0 0 12.5%;
    -ms-flex: 0 0 12.5%;
    flex: 0 0 12.5%;
  }
}

@media screen and (min-width:1025px) {
  .c18 {
    max-width: 9.166666666666668%;
    -webkit-flex: 0 0 9.166666666666668%;
    -ms-flex: 0 0 9.166666666666668%;
    flex: 0 0 9.166666666666668%;
  }
}

@media screen and (min-width:481px) {
  .c21 {
    max-width: 11.666666666666666%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:769px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media screen and (min-width:1025px) {
  .c21 {
    max-width: 11.666666666666666%;
    -webkit-flex: 0 0 11.666666666666666%;
    -ms-flex: 0 0 11.666666666666666%;
    flex: 0 0 11.666666666666666%;
  }
}

@media only screen and {
  .c12 {
    font-size: 16px;
  }
}

@media only screen and {
  .c7 {
    font-size: 16px;
  }
}

@media screen and (min-width:481px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c9 {
    display: none;
  }
}

@media screen and (min-width:769px) {
  .c16 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:481px) {
  .c5 {
    margin: 18px 0 18px 0;
  }

  .c5:hover {
    background-color: rgba(2,108,223,0.2);
  }
}

@media screen and (min-width:481px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 30px;
  }
}

@media screen and (min-width:481px) {
  .c20 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 row c2"
  >
    <button
      aria-expanded={false}
      aria-label="Expand Row"
      className="expandOrCollapse c3"
      onClick={[Function]}
      role="button"
    >
      <svg
        fill="#000"
        height={15}
        style={Object {}}
        viewBox="0 0 15 7"
        width={15}
      >
        <path
          d="M13.974.132a.614.614 0 0 0-.762 0L7.17 5.341 1.12.132C.916-.044.563-.037.376.125a.398.398 0 0 0-.167.332c0 .058.012.116.036.17a.385.385 0 0 0 .12.155l6.427 5.54a.568.568 0 0 0 .378.135.568.568 0 0 0 .377-.135l6.427-5.54a.422.422 0 0 0 .156-.325.42.42 0 0 0-.156-.325z"
        />
      </svg>
    </button>
    <div
      className="c4"
    >
      <a
        aria-label="See Tickets"
        className="c5"
        href="/"
        onClick={[Function]}
        role="link"
      >
        <div
          className="row c2"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              color={null}
              style={
                Object {
                  "textTransform": "uppercase",
                }
              }
            >
              apr 23
            </div>
            <div
              className="c8"
            >
              Thu, 8:00 PM
            </div>
          </div>
          <div
            className="c9 c10"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
              >
                Del Mar Fairgrounds
              </div>
            </div>
            <div
              className="c13"
            >
              <div
                className="c8"
              >
                Del Mar Fairgrounds
              </div>
            </div>
          </div>
          <div
            className="c14 c15"
          >
            <div
              className="c12"
            >
              Del Mar Fairgrounds
            </div>
          </div>
          <div
            className="c16 c17"
          >
            <div
              className="c12"
            >
              Del Mar Fairgrounds
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c14 c18"
    >
      <span
        aria-label="See Tickets"
        className="c19"
        role="button"
        width="102px"
      >
        See Tickets
      </span>
    </div>
    <div
      className="c20 c21"
    >
      <button
        aria-label="More Info"
        className="moreInfo c22"
        onClick={[Function]}
        role="button"
      >
        <svg
          fill="rgba(0, 0, 15, 0.6)"
          height={22}
          viewBox="0 0 5 21"
          width={22}
        >
          <path
            d="M0 2.5C0 1.81.242 1.22.727.732A2.394 2.394 0 0 1 2.492 0a2.42 2.42 0 0 1 1.773.732C4.755 1.221 5 1.81 5 2.5s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 5C1.8 5 1.212 4.756.727 4.268A2.418 2.418 0 0 1 0 2.5zm0 8.008c0-.692.242-1.283.727-1.773A2.39 2.39 0 0 1 2.492 8c.692 0 1.283.245 1.773.735S5 9.815 5 10.508a2.39 2.39 0 0 1-.735 1.765A2.43 2.43 0 0 1 2.492 13c-.692 0-1.28-.242-1.765-.727A2.403 2.403 0 0 1 0 10.508zM0 18.5c0-.69.242-1.28.727-1.768A2.394 2.394 0 0 1 2.492 16a2.42 2.42 0 0 1 1.773.732c.49.489.735 1.078.735 1.768s-.245 1.28-.735 1.768A2.42 2.42 0 0 1 2.492 21c-.692 0-1.28-.244-1.765-.732A2.418 2.418 0 0 1 0 18.5z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
